tests/lex_error.expected
tests/lex_error.mira:2:13: error: unterminated string literal
