tests/lex_error.mira
fn main(): void {
    let x = "unclosed;
}
